--- a/src/index.css
+++ b/src/index.css
@@ -51,7 +51,7 @@ body {
   }
 
   .video-container {
-    @apply relative sm:w-[70vw] w-[88vw] md:h-[70vh] sm:h-[50vh] h-[35vh]
+    @apply relative sm:w-[70vw] w-[88vw]
   }
 
   .story-text {
