--- a/src/index.css
+++ b/src/index.css
@@ -39,7 +39,7 @@ body {
   }
 
   .section-title-2 {
-    @apply text-center font-bold lg:text-5xl md:text-4xl text-2xl text-gray-400 opacity-0 mb-2
+    @apply text-center font-bold lg:text-5xl md:text-4xl text-2xl text-gray-400 opacity-0 translate-y-[100px] mb-2
   }
 
   .common-padding {
@@ -67,6 +67,6 @@ body {
   }
 
   .btn {
-    @apply m-5 px-10 py-2 bg-sky-800 rounded-full opacity-0
+    @apply m-5 px-10 py-2 bg-sky-800 rounded-full opacity-0 translate-y-[100px]
   }
 }
